--- a/style.css
+++ b/style.css
@@ -123,13 +123,6 @@ font-family:Arial, Helvetica, sans-serif;
 text-align: center;
 }
 
-.t1{
-
-}
-
-.t2{
-    
-}
 
 @media (min-width: 750px) {
 
@@ -194,14 +187,19 @@ font-size: 22px ;
    top : 0;
    animation: fade linear forwards;
    animation-timeline: scroll(y);
-   animation-range: exit 30%;
+   animation-range: exit 42%;
 }
 
 @keyframes fade{ 
- 0%,25%{opacity: 0;
-    background-image:linear-gradient(180deg,rgb(199, 102, 255) ,rgba(255, 255, 255, 0));
+ 0%,25%{
+    background-image:linear-gradient(180deg,rgba(199, 102, 255, 0) ,rgba(255, 255, 255, 0));
 }
- 85%,100%{opacity: 1;
+
+30%{
+    background-image:linear-gradient(180deg,rgba(199, 102, 255, 0.49) ,rgba(255, 255, 255, 0));
+
+}
+ 40%,100%{
     background-image:linear-gradient(180deg,rgb(199, 102, 255) ,rgba(255, 255, 255, 0));
 }
 }
