--- a/style.css
+++ b/style.css
@@ -159,7 +159,7 @@ text-align: center;
         border-width: 15px 39px;
         border-style: solid;
         border-color: transparent;
-        border-right-color: #c766ff; 
+        border-right-color: #000000; 
         transform: rotate(330deg);
 
     }
