--- a/style.css
+++ b/style.css
@@ -97,7 +97,7 @@ object-fit: cover;
     margin-bottom: 7px;
     width:fit-content;
     padding: 10px;
-    background-color: #c766ff;
+    background-color: #000000;
     border-top-left-radius: 90px;
     border-top-right-radius: 90px;
     border-bottom-left-radius: 90px;
