--- a/style.css
+++ b/style.css
@@ -185,7 +185,7 @@ font-size: 22px ;
     height: 55px;
    position: sticky;  
    top : 0;
-   transition: 1s;
+   transition: 0.5s;
    animation: fade linear forwards;
    animation-timeline: scroll(y);
    animation-range: exit 0%;
@@ -196,7 +196,12 @@ font-size: 22px ;
         background-image:linear-gradient(180deg,rgba(199, 102, 255, 0) ,rgba(255, 255, 255, 0));
     }
     
-     50%,100%{
+    45%{
+        background-image:linear-gradient(180deg,rgba(199, 102, 255, 0.455) ,rgba(255, 255, 255, 0));
+
+    }
+
+     70%,100%{
         background-image:linear-gradient(180deg,rgb(199, 102, 255) ,rgba(255, 255, 255, 0));
     }
 }
