--- a/style2.css
+++ b/style2.css
@@ -16,7 +16,9 @@ body{
   .cls-31 {
     fill: #fffc9c;
   }
-  
+  .cls-19 {
+    fill: #9886af;
+  }
  .cls-20, .cls-26 {
     mix-blend-mode: color-burn;
   }
