--- a/style2.css
+++ b/style2.css
@@ -1,3 +1,10 @@
 body{
     background-color: #e0fffc;
 }
+
+.img-1{
+    width: 100px;
+    height: 100px;
+    object-fit: cover;
+    margin: auto;
+}
