--- a/style2.css
+++ b/style2.css
@@ -3,12 +3,12 @@ body{
 }
 
 .img-1{
-    width: 100px;
-    height: 100px;
+    width: 50px;
+    height: 50px;
     object-fit: cover;
     margin: auto;
 }
 
 img{
-    scale: 50px 50px;
+    scale: 0.2;
 }
