--- a/style2.css
+++ b/style2.css
@@ -62,7 +62,7 @@ img{
 
 
 .t-1 ,.t-2{
-    font-family: Broadway;
+    font-family: Broadway , Broadway;
     color:#9886af; 
     margin : auto;
 }
