--- a/style3.css
+++ b/style3.css
@@ -25,7 +25,7 @@ form{
 
 form h3{
     color:#fffc9c ;
-    font-family:  Broadway, Broadway;
+    font-family:  URL(BROADW.TTF);
     margin: 20px auto;
 font-size: 25px;
 }
