--- a/style3.css
+++ b/style3.css
@@ -4,6 +4,11 @@
     box-sizing: border-box;
 }
 
+@font-face {
+    font-family: broadw;
+    src: url(BROADW.TTF);
+}
+
 .con{
     width: 100%;
     height: 100vh;
@@ -25,10 +30,14 @@ form{
 
 form h3{
     color:#fffc9c ;
-    font-family:  URL(BROADW.TTF);
-    margin: 20px auto;
 font-size: 25px;
 }
+
+form h3,form button{
+    font-family: broadw;
+    margin: 20px auto;
+}
+
 
 form input,form textarea{
     border:0;
@@ -44,12 +53,10 @@ form button{
     background: #fffc9c  ;
     color: #9886af;
     font-size: 18px;
-    font-family:  URL(BROADW.TTF);
     border: 0;
     outline: none;
     cursor: pointer;
     width : 150px;
-    margin: 20px auto;
     border-radius: 30px;
 }
 
