--- a/style3.css
+++ b/style3.css
@@ -25,7 +25,7 @@ form{
     padding: 2vw 4vw;
     width: 90%;
     max-width: 600px;
-    border-radius: 10px;
+    border-radius: 20px;
 }
 
 form h3{
@@ -47,6 +47,7 @@ form input,form textarea{
     background: white;
     border-radius: 20px;
     font-size: 16px;
+    font-family: forte;
 }
 form button{
     padding: 15px;
