--- a/style3.css
+++ b/style3.css
@@ -16,7 +16,7 @@
 .con{
     width: 100%;
     height: 100vh;
-    background-color: #000000;
+    background-color: #e0fffc;
     display: flex;
     align-items: center;
     justify-content: center;
